Fix spacing, clean up node packages

--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -10,7 +10,7 @@
 	}
 }
 
-@media screen and (min-width: $small-phone-breakpoint) {
+@media screen and (max-width: $small-phone-breakpoint) {
 	.container {
 		padding: $xl-size 15% 0 15%;
 	}
